--- a/style.css
+++ b/style.css
@@ -102,15 +102,17 @@ background: #4e49493a;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 18px;
+  margin-top: -5px;
+  height: 36px;
 }
 .task-edit-icon-container {
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 .task-edit-icon{
   width: 25px;
   margin-right: 5px;
-  margin-bottom: 5px;
+  /* margin-bottom: 0px; */
   margin-top: -10px;
   transition: 0.5s;
   filter: contrast(0.1);
@@ -133,6 +135,85 @@ background: #4e49493a;
   cursor: pointer;
   transform: scale(1.1);
   transition: 0.5s;
+}
+.task-priority-icon {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-left: 10px;
+}
+.priority-middle {
+  background-color: #fff176;
+}
+.priority-low {
+  background-color: #80deea;
+}
+.priority-height {
+  background-color: #e93636;
+}
+
+
+.common-div {
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  position: relative;
+}
+.priority-button{
+  border-radius: 12px;
+  background-color: #eeeeee;
+  border: 1px solid #80808000;
+  text-align: center;
+  color: #495d67;
+  outline: none;
+  display: flex;
+  height: 27px;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 1px;
+  font-size: 16px;
+  
+}
+.priority-button:hover {
+  cursor: pointer;
+  color: #fffdfd;
+  background-color: #bdbdbd;
+
+}
+.common-div-for-select-none {
+  display:none;
+}
+.common-div-for-select{
+  display: block;
+  margin-top: 5px;
+  background-color: white;
+  border: 1px solid #80808000;
+  box-shadow: 1px 1px 8px 2px #f5f5f5;
+  border-radius: 12px;
+  color: #495d67;
+  position: absolute;
+  width: 100px;
+  top: 28px;
+  z-index:1;
+}
+/* .common-div-for-select:hover {
+  border: 1px solid #80808000;
+} */
+.select {
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 2px;
+  padding:3px 0;
+}
+.select:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
+  color: #424242;
+}
+.priority-container {
+  display: flex;
+  align-items: center;
 }
 
 
@@ -332,7 +413,8 @@ background: #4e49493a;
   color: white;
 
 }
-/*toggle*/
+
+
 .span-checkbox {
   letter-spacing: 0.5px;
   font-size: 17px;
@@ -341,10 +423,64 @@ background: #4e49493a;
 }
 .toggle-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin-top: 10px;
+  margin-left: 20px;
+  align-items: center;
+  margin-right: 15px;
+}
+.deleted-toggle{
+  display: flex;
 }
 
+.priority-select {
+  outline: none;
+  border: 1px solid#455a643b;
+  border-radius: 8px;
+  width: 70px;
+  color: #455a64;
+}
+.priority-select:hover{
+  background-color: #f5f5f5;
+}
+.priority-span {
+  letter-spacing: 0.7px;
+  font-size: 17px;
+  margin-right: 10px;
+  color: #455a64;
+}
+
+/*input desc*/
+.desc-container {
+  width: 180px;
+  display: flex;
+  align-items: center;
+}
+
+.desc-input {
+  width: 100%;
+  outline: none;
+  border-radius: 10px;
+  text-indent: 6px;
+  color: #455a64;
+  letter-spacing: 0.6px;
+  transition: .3s box-shadow;
+  border: 2px solid #8080800a;
+  background-color: #eeeeee;
+  padding: 3px 0;
+}
+.desc-input:hover,.desc-input:focus {
+  /* box-shadow:0 0 4px rgba(0,0,0,0.5); */
+  box-shadow: 0 0 1px 1px #bcb3b373;
+}
+.search-img {
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+
+/*togger*/
 input[type=checkbox]{
 	height: 0;
 	width: 0;
@@ -387,9 +523,9 @@ label:active:after {
 	width: 15px;
 }
 
-.toggle-container{
+/* .toggle-container{
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
   margin-right: 15px;
-}
+} */
