--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
   flex-shrink: 0;
   display: flex;
   justify-content:space-between;
+  padding: 0 10px;
 
 }
 
@@ -686,4 +687,56 @@ textarea {
   font-size: 18px;
   margin-bottom: 2px;
   display: block;
+}
+
+.logo-modal-container {
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  justify-content: space-between;
+  width: 30%;
+  height: 35%;
+  z-index: 200;
+  padding: 15px 20px;
+  border-radius: 10px;
+  
+}
+.logo-containers {
+  align-self:center;
+  display: flex;
+  flex-direction: column;
+}
+
+.nick-input {
+  outline: none;
+  border-radius: 8px;
+  border: 1px solid#a9a9a954;
+  box-shadow: 2px 3px 7px -1px #80808040;
+  color: #455a64d9;
+  padding: 5px;
+  background-color: #eeeeee;
+  font-size: 16px;
+  margin-top: 5px;
+}
+.nick-label {
+  color: #455a64;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding-left: 2px;
+}
+.hide-error-span {
+  visibility: hidden;
+  padding-left: 5px;
+  color: red;
+  font-size: 13px;
+  font-weight: bold;
+  margin-top: 2px;
+}
+.visible-error-span {
+  visibility:visible;
 }
